arm/web-db-app/template.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "resourceNamePrefix": {
            "type": "string",
            "defaultValue": "aaa"
        },
        "beSubnetAddressPrefix": {
            "type": "string"
        },
       "webSubnetAddressPrefix": {
            "type": "string"
        },
        "appgwSubnetAddressPrefix": {
            "type": "string"
        },
        "sqlAdminUsername": {
            "type": "securestring",
            "metadata": {
                "description":"SQL Databaseの管理者アカウントです。"
            }
        },
        "sqlAdminPassword": {
            "type": "securestring",
            "metadata": {
                "description":"SQL Databaseの管理者アカウントのパスワードです。"
            }
        }

    },
    "variables": {
        "virtualNetworkName":"[concat(parameters('resourceNamePrefix'), '-vnet')]",
        "beSubnetName":"default",
        "webSubnetName":"web",
        "appgwSubnetName":"appgw",
        "beNetworkSecurityGroupName":"[concat(variables('beSubnetName'), '-nsg')]",
        "webNetworkSecurityGroupName":"[concat(variables('webSubnetName'), '-nsg')]",
        "appgwNetworkSecurityGroupName":"[concat(variables('appgwSubnetName'), '-nsg')]",
        "sqlserverName":"[concat(parameters('resourceNamePrefix'), '')]",
        "databaseName":"pubs",
        "appInsightsName":"[concat(parameters('resourceNamePrefix'), '-ai')]",
        "hostingPlanName":"[concat(parameters('resourceNamePrefix'), '')]",
        "webAppName":"[concat(parameters('resourceNamePrefix'), '')]",
        "publicIPAddressName":"[concat(parameters('resourceNamePrefix'), '-appgw-pip')]",
        "appGwName":"[concat(parameters('resourceNamePrefix'), '')]",
        "customProbeName":"custom-probe01",
        "sqlDiagnosticsSettingName":"sql-diagnostics",
        "workspaceName":"[concat(parameters('resourceNamePrefix'), '-la')]",
        "diagnosticsStorageAccountName":"[concat(parameters('resourceNamePrefix'), 'storage')]",
        "appgwDiagnosticsSettingName":"appgw-diagnostics"
    },
    "resources": [
        {
            "name": "[variables('appGwName')]",
            "type": "Microsoft.Network/applicationGateways",
            "apiVersion": "2019-02-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('appgwSubnetName'))]",
                "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
            ],
            "properties": {
                "sku": {
                    "name": "WAF_v2",
                    "tier": "WAF_v2"
                },
                "gatewayIPConfigurations": [
                    {
                        "name": "appGatewayIpConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('appgwSubnetName'))]"
                            }
                        }
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "appGwPublicFrontendIp",
                        "properties": {
                            "PublicIPAddress": {
                                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                            }
                        }
                    }
                ],
                "frontendPorts": [
                    {
                        "name": "port_80",
                        "properties": {
                            "Port": 80
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "backend01",
                        "properties": {
                            "backendAddresses": [
                                {
                                    "fqdn": "[concat(variables('webAppName'), '.azurewebsites.net')]"
                                }
                            ]
                        }
                    }
                ],
                "backendHttpSettingsCollection": [
                    {
                        "name": "httpsetting01",
                        "properties": {
                            "Port": 80,
                            "Protocol": "Http",
                            "cookieBasedAffinity": "Disabled",
                            "pickHostNameFromBackendAddress": true,
                            "requestTimeout": 20,
                            "path": "/",
                            "probe": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/probes/', variables('customProbeName'))]"
                            }
                        }
                    }
                ],
                "httpListeners": [
                    {
                        "name": "listener01",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/frontendIPConfigurations/appGwPublicFrontendIp')]"
                            },
                            "frontendPort": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/frontendPorts/port_80')]"
                            },
                            "protocol": "Http",
                            "sslCertificate": null
                        }
                    }
                ],
                "requestRoutingRules": [
                    {
                        "Name": "rule01",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/httpListeners/listener01')]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/backendAddressPools/backend01')]"
                            },
                            "backendHttpSettings": {
                                "id": "[concat(resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName')), '/backendHttpSettingsCollection/httpsetting01')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "[variables('customProbeName')]",
                        "properties": {
                            "protocol": "Http",
                            "path": "/",
                            "interval": 30,
                            "timeout": 30,
                            "unhealthyThreshold": 3,
                            "pickHostNameFromBackendHttpSettings": true,
                            "minServers": 0,
                            "match": {}
                        },
                        "type": "Microsoft.Network/applicationGateways/probes"
                    }
                ],
                "enableHttp2": false,
                "sslCertificates": [],
                "autoscaleConfiguration": {
                    "minCapacity": 2,
                    "maxCapacity": 10
                },
                "webApplicationFirewallConfiguration": {
                    "enabled": true,
                    "firewallMode": "Detection",
                    "ruleSetType": "OWASP",
                    "ruleSetVersion": "3.0"
                }
            },
            "resources": [
                {
                    "type": "providers/diagnosticSettings",
                    "name": "[concat('Microsoft.Insights/', variables('appgwDiagnosticsSettingName'))]",
                    "apiVersion": "2017-05-01-preview",
                    "dependsOn": [
                        "[resourceId(resourceGroup().name, 'Microsoft.Network/applicationGateways', variables('appGwName'))]"
                    ],
                    "properties":{
                        "name":"[variables('appgwDiagnosticsSettingName')]",
                        "storageAccountId":"[resourceId('Microsoft.Storage/storageAccounts', variables('diagnosticsStorageAccountName'))]",
                        "workspaceId": "[resourceId('Microsoft.operationalinsights/workspaces', variables('workspaceName'))]",
                        "logs":[
                            {
                                "category":"ApplicationGatewayAccessLog",
                                "enabled": true,
                                "retentionPolicy":{
                                    "days": 365,
                                    "enabled": true
                                }
                            }
                        ],
                        "metrics":[
                            {
                                "category":"AllMetrics",
                                "enabled": true,
                                "retentionPolicy":{
                                    "days": 365,
                                    "enabled": true
                                }
                            }
                        ]
                    }
                }
            ]
        },
        {
            "apiVersion": "2019-02-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressName')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "publicIpAddressVersion": "IPv4"
            }
        },
        {
            "apiVersion": "2018-02-01",
            "name": "[variables('webAppName')]",
            "type": "Microsoft.Web/sites",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId(resourceGroup().name, 'Microsoft.Web/serverfarms', variables('hostingPlanName'))]",
                "[resourceId(resourceGroup().name, 'Microsoft.Insights/components', variables('appInsightsName'))]"
            ],
            "properties": {
                "name": "[variables('webAppName')]",
                "siteConfig": {
                    "appSettings": [
                        {
                            "name": "APPINSIGHTS_INSTRUMENTATIONKEY",
                            "value": "[reference(concat('Microsoft.Insights/components/', variables('appInsightsName'))).InstrumentationKey]"
                        },
                        {
                            "name": "ApplicationInsightsAgent_EXTENSION_VERSION",
                            "value": "~2"
                        },
                        {
                            "name": "XDT_MicrosoftApplicationInsights_Mode",
                            "value": "default"
                        },
                        {
                            "name": "DiagnosticServices_EXTENSION_VERSION",
                            "value": "disabled"
                        },
                        {
                            "name": "APPINSIGHTS_PROFILERFEATURE_VERSION",
                            "value": "disabled"
                        },
                        {
                            "name": "APPINSIGHTS_SNAPSHOTFEATURE_VERSION",
                            "value": "disabled"
                        },
                        {
                            "name": "InstrumentationEngine_EXTENSION_VERSION",
                            "value": "disabled"
                        },
                        {
                            "name": "SnapshotDebugger_EXTENSION_VERSION",
                            "value": "disabled"
                        },
                        {
                            "name": "XDT_MicrosoftApplicationInsights_BaseExtensions",
                            "value": "disabled"
                        }
                    ],
                    "metadata": [
                        {
                            "name": "CURRENT_STACK",
                            "value": "dotnet"
                        }
                    ],
                    "netFrameworkVersion": "v4.0",
                    "alwaysOn": true
                },
                "serverFarmId": "[resourceId(resourceGroup().name, 'Microsoft.Web/serverfarms', variables('hostingPlanName'))]",
                "clientAffinityEnabled": true
            }
        },
        {
            "type": "Microsoft.Web/sites/config",
            "apiVersion": "2018-02-01",
            "name": "[concat(variables('webAppName'), '/web')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId(resourceGroup().name, 'Microsoft.Web/sites', variables('webAppName'))]"
            ],
            "properties":{
                "ipSecurityRestrictions":[
                    {
                        "vnetSubnetResourceId":"[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('appgwSubnetName'))]",
                        "action": "Allow",
                        "priority": 100,
                        "name": "accessRestriction01"
                    }
                ]
            }
        },
        {
            "apiVersion": "2018-02-01",
            "name": "[variables('hostingPlanName')]",
            "type": "Microsoft.Web/serverfarms",
            "location": "[resourceGroup().location]",
            "dependsOn": [
            ],
            "properties": {
                "name": "[variables('hostingPlanName')]"
            },
            "sku": {
                "Tier": "Standard",
                "Name": "S1"
            }
        },
        {
            "name": "[variables('appInsightsName')]",
            "type": "Microsoft.Insights/components",
            "location": "[resourceGroup().location]",
            "apiVersion": "2015-05-01",
            "kind": "web",
            "properties": {
                "Application_Type": "web"
            }
        },
        {
            "type": "Microsoft.Sql/servers",
            "name": "[variables('sqlserverName')]",
            "apiVersion": "2015-05-01-preview",
            "location": "[resourceGroup().location]",
            "properties": {
                "administratorLogin": "[parameters('sqlAdminUsername')]",
                "administratorLoginPassword": "[parameters('sqlAdminPassword')]",
                "version": "12.0"
            },
            "resources": [
                {
                    "type": "databases",
                    "name": "[variables('databaseName')]",
                    "apiVersion": "2017-10-01-preview",
                    "location": "[resourceGroup().location]",
                    "properties": {
                        "collation":"SQL_Latin1_General_CP1_CI_AS",
                        "maxSizeBytes": "2147483648"
                    },
                    "sku": {
                        "name": "Basic",
                        "tier": "Basic"
                    },
                    "dependsOn": [
                        "[resourceId(resourceGroup().name, 'Microsoft.Sql/servers', variables('sqlserverName'))]"
                    ],
                    "resources": [
                        {
                            "type": "providers/diagnosticSettings",
                            "name": "[concat('Microsoft.Insights/', variables('sqlDiagnosticsSettingName'))]",
                            "apiVersion": "2017-05-01-preview",
                            "dependsOn": [
                                "[resourceId(resourceGroup().name, 'Microsoft.Sql/servers/databases', variables('sqlserverName'), variables('databaseName'))]"
                            ],
                            "properties":{
                                "name":"[variables('sqlDiagnosticsSettingName')]",
                                "storageAccountId":"[resourceId('Microsoft.Storage/storageAccounts', variables('diagnosticsStorageAccountName'))]",
                                "workspaceId": "[resourceId('Microsoft.operationalinsights/workspaces', variables('workspaceName'))]",
                                "logs":[
                                    {
                                        "category":"SQLInsights",
                                        "enabled": true,
                                        "retentionPolicy":{
                                            "days": 365,
                                            "enabled": true
                                        }
                                    }
                                ],
                                "metrics":[
                                    {
                                        "category":"Basic",
                                        "enabled": true,
                                        "retentionPolicy":{
                                            "days": 365,
                                            "enabled": true
                                        }
                                    }
                                ]
                            }
                        }
                    ]
                },
                {
                    "type": "firewallrules",
                    "name": "AllowAllWindowsAzureIps",
                    "apiVersion": "2014-04-01-preview",
                    "location": "[resourceGroup().location]",
                    "properties": {
                        "endIpAddress": "0.0.0.0",
                        "startIpAddress": "0.0.0.0"
                    },
                    "dependsOn": [
                        "[resourceId(resourceGroup().name, 'Microsoft.Sql/servers', variables('sqlserverName'))]"
                    ]
                }
            ]
        },
        {
            "type": "Microsoft.Sql/servers/virtualNetworkRules",
            "apiVersion": "2015-05-01-preview",
            "name": "[concat(variables('sqlserverName'), '/newVnetRule1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', variables('sqlserverName'))]"
            ],
            "properties": {
                "virtualNetworkSubnetId": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('beSubnetName'))]",
                "ignoreMissingVnetServiceEndpoint": false
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('webNetworkSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules":[
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('appgwNetworkSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules":[
                    {
                        "name": "AllowAppGw",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_80",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_443",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-04-01",
            "name": "[concat(variables('virtualNetworkName'), '/', variables('beSubnetName'))]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "location": "[resourceGroup().location]",
            "dependsOn": [
            ],
            "properties": {
                "addressPrefix": "[parameters('beSubnetAddressPrefix')]",
                "networkSecurityGroup":{
                    "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('beNetworkSecurityGroupName'))]"
                },
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.Sql",
                        "locations": [
                            "[resourceGroup().location]"
                        ]
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-04-01",
            "name": "[concat(variables('virtualNetworkName'), '/', variables('webSubnetName'))]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('webNetworkSecurityGroupName'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('webSubnetAddressPrefix')]",
                "networkSecurityGroup":{
                    "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('webNetworkSecurityGroupName'))]"
                }
            }
        },
        {
            "apiVersion": "2019-04-01",
            "name": "[concat(variables('virtualNetworkName'), '/', variables('appgwSubnetName'))]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('appgwNetworkSecurityGroupName'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('appgwSubnetAddressPrefix')]",
                "networkSecurityGroup":{
                    "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('appgwNetworkSecurityGroupName'))]"
                },
                "serviceEndpoints": [
                    {
                        "provisioningState": "Succeeded",
                        "service": "Microsoft.Web",
                        "locations": [
                            "*"
                        ]
                    }
                ]
            }
        }
    ],
    "outputs": {
    }
}
